<resources>
    <string name="app_name">Meal Prep</string>

    <string name="id_hint">Id</string>
    <string name="id_error_message">Id is blank</string>
    <string name="email_hint"> email</string>
    <string name="first_name_error_message">Firstname is blank</string>
    <string name="password_hint">password</string>
    <string name="surname_error_message">Surname is blank</string>
    <string name="recipe_hint">Recipe</string>
    <string name="tel_no_error_message">Telephone number is blank</string>
    <!-- Add Screen -->
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="name_error">Error with the name</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_error">Error with the Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_error">Error with the Instructions</string>
    <string name="category"> Category</string>
    <string name="select_category">Select Category</string>



    <!-- Edit Screen -->
    <string name="edit">Edit</string>
    <!-- start Screen -->
    <string name="start_title">Welcome to</string>
    <string name="start_title2">Rapid Meal Prep</string>
    <string name="start">Start</string>
    <string name="start_button">Start</string>

    <!-- Home Screen -->
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <!-- LoginScreen -->

    <string name="login_screen_title">Login</string>
    <string name="email">Email</string>
    <string name="emailField">Email Field</string>
    <string name="email_error_message">Incorrect Email.</string>
    <string name="password">Password</string>
    <string name="password_error_message">Incorrect Password</string>

    <!-- Sign Up Screen -->
    <string name="sign_up_screen_title">Enter Details To Sign Up</string>
    <string name="verify_email">Verify email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>

    <!-- BulkPrep Screen -->
    <string name="bulk_prep">Bulk Prep</string>
    <string name="start_bulk_prep">Start Bulk Prep</string>
    <string name="bulk_prep_text">Preparing meals in bulk can save you time and money. You can add your bulk prep recipes below using the add button.</string>


    <!-- track Screen -->
    <string name="track">Track</string>
    <string name="start_track">Start Track</string>
    <string name="current_weight">Current Weight</string>
    <string name="target_weight">Target Weight</string>


    <!-- weight loss Screen -->
    <string name="weight_loss">Weight Loss</string>
    <string name="start_weight_loss">Start Weight Loss</string>
    <string name="weight_loss_text">To lose weight, you need low carb, high protein meals. Minimize sugary or oily food. You can add your Weight Loss recipes below using the add button.</string>


    <!-- weight gain Screen -->
    <string name="weight_gain">Weight Gain</string>
    <string name="start_weight_gain">Start Weight Gain</string>
    <string name="weight_gain_text">Ideal recipes to help increase weight include high carbs and protein. You can add your Weight Gain recipes below using the add button.</string>


    <!-- vegan Screen -->
    <string name="vegan">Vegan</string>
    <string name="start_vegan">Start Vegan</string>
    <string name="vegan_screen_text">You can add your vegan recipes below using the add button.</string>


    <!-- settings Screen -->
    <string name="settings">Settings</string>
    <string name="start_settings">Start Settings</string>


</resources>
