...
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colors.background),
        topBar = {
            Column {
                Text(
                    text = "Weight Loss Recipes",
                    style = MaterialTheme.typography.h4,
                    modifier = Modifier.padding(top = 26.dp, start = 16.dp, bottom = 8.dp)
                )
                Text(
                    text = stringResource(id = R.string.weight_loss_text),
                    style = MaterialTheme.typography.body2,
...
